--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <script>
     jQuery(document).ready( function($) {
 		$('.tagButton').tag({
-			id			: '62', //required
-			type		: '1', //1 - user; 2 - community //required
-			color		: ''
+			id			: '', //required
+			type		: '', //1 - user; 2 - community //required
+			color		: '', //optional
+			title		: '', //onhover title for your description of button - optional
 		});
 	});
     </script>
