--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script>
     jQuery(document).ready( function($) {
 		$('.tagButton').tag({
-			id			: '', //required
+			id			: '', //required tagbond ID (user or community)
 			type		: '', //1 - user; 2 - community //required
 			color		: '', //optional
 			title		: '', //onhover title for your description of button - optional
