--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     <script>
     jQuery(document).ready( function($) {
 		$('.tagButton').tag({
-			id			: '', //required tagbond ID (user or community)
-			type		: '', //1 - user; 2 - community //required
+			id		: '249', //required tagbond ID (user or community)
+			tag 		: 'Donate', //optional if user wants text label on the button instead of the id
+			type		: '2', //1 - user; 2 - community //required
 			color		: '', //optional
-			title		: '', //onhover title for your description of button - optional
+			title		: 'test', //onhover title for your description of button - optional
 		});
 	});
     </script>
